created current weather object and rendered it

--- a/index.html
+++ b/index.html
@@ -5,39 +5,223 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- Latest compiled and minified CSS -->
+
+    <!-- FontAwesome icons CDN -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Weather app</h1>
+    <h1>Időjárás</h1>
     <div class="container">
-      <div class="row">
-        <div class="col-sm">One of three columns</div>
-        <div class="col-sm">One of three columns</div>
-        <div class="col-sm">One of three columns</div>
+      <div class="today"></div>
+      <div class="current"></div>
+      <div class="forecast">
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+          <img
+            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
+            alt="napos idő"
+          />
+          <h5>18:00</h5>
+          <ul>
+            <li>
+              <i class="bi bi-umbrella"></i>
+              <p>89%</p>
+            </li>
+            <li>
+              <i class="bi bi-thermometer-high"></i>
+              <p>12.4°C</p>
+            </li>
+            <li>
+              <i class="bi bi-wind"></i>
+              <p>11.6 mph</p>
+            </li>
+            <li>
+              <i class="bi bi-droplet"></i>
+              <p>63%</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="app.js"></script>
   </body>
 </html>
