created weatherforecast functionality

--- a/index.html
+++ b/index.html
@@ -18,208 +18,7 @@
     <div class="container">
       <div class="today"></div>
       <div class="current"></div>
-      <div class="forecast">
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <img
-            src="https://cdn.weatherapi.com/weather/64x64/day/113.png"
-            alt="napos idő"
-          />
-          <h5>18:00</h5>
-          <ul>
-            <li>
-              <i class="bi bi-umbrella"></i>
-              <p>89%</p>
-            </li>
-            <li>
-              <i class="bi bi-thermometer-high"></i>
-              <p>12.4°C</p>
-            </li>
-            <li>
-              <i class="bi bi-wind"></i>
-              <p>11.6 mph</p>
-            </li>
-            <li>
-              <i class="bi bi-droplet"></i>
-              <p>63%</p>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <div class="forecast"></div>
     </div>
 
     <script src="app.js"></script>
